--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 
 <body>
 
+    <defs>
+        <linearGradient id="gradient" y1="0" y2="1">
+         <stop stop-color="#EEF85B" offset="0"/>
+         <stop stop-color="#09E5C3" offset="1"/>
+        </linearGradient>
+    </defs>
+
     <div id="select-map-container">
         <svg id="select-map"></svg>
     </div>
@@ -41,6 +48,12 @@
     </div>
 
 
+    <defs>
+        <linearGradient id="gradient" y1="0" y2="1">
+         <stop stop-color="#EEF85B" offset="0"/>
+         <stop stop-color="#09E5C3" offset="1"/>
+        </linearGradient>
+       </defs>
 
 
     <script src="script.js"></script>
