Remove useless files

--- a/index.html
+++ b/index.html
@@ -98,11 +98,14 @@
 
 
     <div class="content">
+        <div id="world-causes-container">
+            <svg id="world-causes-barchart"></svg>
+        </div>
+
 
         <div id="select-map-container">
             <svg id="select-map"></svg>
         </div>
-    
 
 
         <div id="country-info-container">
