--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             
             <div class="flex-column" style="margin-top:1.5em">
                 <g class="flex-row">
-                    <span>Number of Deadliest Causes to Show: </span>
+                    <span>Broj najsmrtonosnijih uzroka smrti: </span>
                     <select class="form-select " id="causesToShowDropdown">
                     </select>
                 </g>
